# ardesia

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h  config.status  configure  configure.ac  configure.in
applications/: ardesia.desktop.in
data/: Makefile.am  annotation_window.glade  ardesia.desktop.in  ardesia.iss  background_window.glade  crash_dialog.glade  horizontal_bar.glade  preference_dialog.glade  project_dialog.glade  share_confirmation_dialog.glade  vertical_bar.glade
debian/: changelog  control  copyright  menu  postinst  rules  watch
desktop/: Makefile.am  annotation_window.glade  ardesia.desktop.in  background_window.glade  crash_dialog.glade  gtk.css  gtkrc  horizontal_bar.glade  info_dialog.glade  iwb-mime.xml  preference_dialog.glade  project_dialog.glade  share_confirmation_dialog.glade  text_window.glade  vertical_bar.glade
desktop/scripts/: screencast.bat  screencast.sh
docs/: Makefile.am  ardesia.1.in
po/: LINGUAS  Makefile  Makefile.in  POTFILES  POTFILES.in  POTFILES.skip  ardesia.pot  de.po  es.po  fr.po  it.po  tr.po  zh_TW.po
src/: Makefile  Makefile.am  Makefile.in  annotate.c  annotate.h  annotate_callbacks.c  annotate_callbacks.h  annotation.glade  annotation_window.c  annotation_window.glade  annotation_window.h  annotation_window_callbacks.c  annotation_window_callbacks.h  ardesia.c  ardesia.glade  ardesia.h  ardesia.ui  ardesia_horizontal.glade  ardesia_horizontal.ui  background.c  background.glade  background.h  background_window.c  background_window.glade  background_window.h  background_window_callbacks.c  background_window_callbacks.h  bar.c  bar.h  bar_callbacks.c  bar_callbacks.h  bezier_spline.c  bezier_spline.h  broken.c  broken.h  callbacks.c  callbacks.h  color_selector.c  color_selector.h  crash_dialog.c  (+64 more)
src/.deps/: annotate.Po  background.Po  bezier_spline.Po  broken.Po  callbacks.Po  color_selector.Po  info_dialog.Po  main.Po  preference_dialog.Po  recorder.Po  saver.Po  text_widget.Po  utils.Po
src/scripts/: ezstream_stdin_ardesia.xml  recordmydesktop_screencast.sh  screencast.bat  screencast.sh
win-installer/: RUN
win32/: RUN  ardesia.iss  ardesia.iss.in  ardesia_open.bat  build_installer  build_installer.in
